created secton realizations

--- a/index.html
+++ b/index.html
@@ -165,9 +165,26 @@
                 quod mazim.</p>
         </div>
     </section>
-    <section class="realizatons"></section>
+    <section class="realizations">
+        <div class="container realizations__container">
+            <h2 class="title">Waxom is Realization of your Ideas.</h2>
+            <p class="realizations__text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
+                saepius. Claritas est etiam
+                processus dynamicus, qui sequitur mutationem consuetudium.</p>
+            <img class="realizations__img realizations__img--left" src="./images/browser-left.png"
+                alt="image of window1">
+            <img class="realizations__img realizations__img--center" src="./images/browser-center.png"
+                alt="image of window2">
+            <img class="realizations__img realizations__img--right" src="./images/browser-right.png"
+                alt="image of window3">
+        </div>
+    </section>
     <div class="text-box"></div>
-    <section class="projects"></section>
+    <section class="projects container">
+        <h2 class="title">Our Latest Projects.</h2>
+        <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus
+            dynamicus, qui sequitur mutationem consuetudium.</p>
+    </section>
     <section class="counters"></section>
     <section class="mobile"></section>
     <section class="brands"></section>
