create section with counters

--- a/index.html
+++ b/index.html
@@ -179,14 +179,52 @@
                 alt="image of window3">
         </div>
     </section>
-    <div class="text-box"></div>
+    <section class="text-box">
+        <div class="container text-box__inner">
+            <div>
+                <h2 class="text-box__title"><span class="colored">Waxom</span> Multipurpose WordPress Theme</h2>
+                <p class="text-box__content">Don't Forget to Rate the Template. Thanks so much!</p>
+            </div>
+            <button class="btn" type="button">Purchase Now</button>
+        </div>
+    </section>
     <section class="projects container">
         <h2 class="title">Our Latest Projects.</h2>
         <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus
             dynamicus, qui sequitur mutationem consuetudium.</p>
     </section>
-    <section class="counters"></section>
-    <section class="mobile"></section>
+    <section class="counters">
+        <h2 hidden>Our counters</h2>
+        <div class="container counters__inner">
+            <div class="counter">
+                <img class="counter__img" src="./images/icons/count1.svg" alt="men icon">
+                <div class="counter__count">3587</div>
+                <p class="counter__name">Satisfied Clients</p>
+            </div>
+            <div class="counter">
+                <img class="counter__img" src="./images/icons/count2.svg" alt="cup icon">
+                <div class="counter__count">207</div>
+                <p class="counter__name">Cups of coffee</p>
+            </div>
+            <div class="counter">
+                <img class="counter__img" src="./images/icons/count3.svg" alt="message icon">
+                <div class="counter__count">2500</div>
+                <p class="counter__name">Blog posts</p>
+            </div>
+            <div class="counter">
+                <img class="counter__img" src="./images/icons/count4.svg" alt="heart icon">
+                <div class="counter__count">873</div>
+                <p class="counter__name">Likes</p>
+            </div>
+            <div class="counter">
+                <img class="counter__img" src="./images/icons/count5.svg" alt="launch icon">
+                <div class="counter__count">900</div>
+                <p class="counter__name">We launched</p>
+            </div>
+
+    </section>
+    <section class="mobile">
+    </section>
     <section class="brands"></section>
     <footer class="footer">
     </footer>
