crreated sections mobile and brands

--- a/index.html
+++ b/index.html
@@ -223,9 +223,30 @@
             </div>
 
     </section>
-    <section class="mobile">
+    <section class="mobile container">
+        <img class="mobile__img" src="./images/i-phone-in-hand.png" alt="picture of phone in hand">
+        <div class="mobile__inner">
+            <h2 class="title">Excellent for Mobile Devices.</h2>
+            <p class="mobile__text">Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii
+                legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in
+                futurum.</p>
+            <ul class="mobile__list">
+                <li>Nam liber tempor cum soluta nobis eleifend option;</li>
+                <li>Option congue nihil imperdiet doming id quod mazim placerat facer;</li>
+                <li>Eodem modo typi, qui nunc nobis videntur parum futurum;</li>
+                <li>Investigationes demonstraverunt lectores</li>
+            </ul>
+        </div>
     </section>
-    <section class="brands"></section>
+    <section class="brands">
+        <div class="container brands__inner">
+            <img class="brands__item" src="./images/icons/logo-01.png" alt="logo of the barber">
+            <img class="brands__item" src="./images/icons/logo-02.png" alt="logo of the delicious">
+            <img class="brands__item" src="./images/icons/logo-03.png" alt="logo of the disiners">
+            <img class="brands__item" src="./images/icons/logo-04.png" alt="logo of the cafe royal">
+        </div>
+    </section>
     <footer class="footer">
     </footer>
     <script src="script.js " defer></script>
