--- a/index.html
+++ b/index.html
@@ -922,6 +922,14 @@
         </div>
     </section>
     <footer class="footer">
+        <div class="footer__inner container">
+            <div class="footer__left">
+                <p>Copyright © 2015 <span class="lite">Waxom</span> | <a href="#"> Privacy Policy</a> | <a href="#">
+                        <span class="lite">FAQ</span></a> | <a href="#">Support</a></p>
+            </div>
+            <div class="footer__rigth">Designed by <span class="lite">ThemeFire</span> | Only on <span
+                    class="lite">Envato Market</span></div>
+        </div>
     </footer>
     <script src="script.js " defer></script>
 
