realisation of smooth scroll

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <ul class="nav menu">
                     <li class="nav__list"><a href="#">Home</a></li>
                     <li class="nav__list"><a href="#about">About us</a></li>
-                    <li class="nav__list"><a href="#works">Stats</a></li>
-                    <li class="nav__list"><a href="#blog">Projects</a></li>
-                    <li class="nav__list"><a href="#clients">Features</a></li>
-                    <li class="nav__list"><a href="#contacts">Partners</a></li>
+                    <li class="nav__list"><a href="#Stats">Stats</a></li>
+                    <li class="nav__list"><a href="#Projects">Projects</a></li>
+                    <li class="nav__list"><a href="#Features">Features</a></li>
+                    <li class="nav__list"><a href="#Partners">Partners</a></li>
                 </ul>
                 <ul class="nav mob-menu">
                     <li class="nav__list"><button type="button" class="burger-close">&times;</button></li>
                     <li class="nav__list"><a href="#">Home</a></li>
                     <li class="nav__list"><a href="#about">About us</a></li>
-                    <li class="nav__list"><a href="#works">Stats</a></li>
-                    <li class="nav__list"><a href="#blog">Projects</a></li>
-                    <li class="nav__list"><a href="#clients">Features</a></li>
-                    <li class="nav__list"><a href="#contacts">Partners</a></li>
+                    <li class="nav__list"><a href="#Stats">Stats</a></li>
+                    <li class="nav__list"><a href="#Projects">Projects</a></li>
+                    <li class="nav__list"><a href="#Features">Features</a></li>
+                    <li class="nav__list"><a href="#Partners">Partners</a></li>
                 </ul>
             </nav>
         </header>
@@ -114,7 +114,7 @@
             <span class="dot"></span>
         </div>
     </section>
-    <section class="services container">
+    <section class="services container" id="about">
         <h2 hidden>Our services</h2>
         <div class="service">
             <svg class="service__img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -165,7 +165,7 @@
                 quod mazim.</p>
         </div>
     </section>
-    <section class="realizations">
+    <section class="realizations" id="stats">
         <div class="container realizations__container">
             <h2 class="title">Waxom is Realization of your Ideas.</h2>
             <p class="realizations__text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
@@ -188,7 +188,7 @@
             <button class="btn" type="button">Purchase Now</button>
         </div>
     </section>
-    <section class="projects container">
+    <section class="projects container" id="Projects">
         <h2 class="title">Our Latest Projects.</h2>
         <p class="projects__text">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
             Claritas est etiam processus
@@ -867,7 +867,7 @@
         </div>
         <button type="button" class="btn">Load more</button>
     </section>
-    <section class="counters">
+    <section class="counters" id="Features">
         <h2 hidden>Our counters</h2>
         <div class="container counters__inner">
             <div class="counter">
@@ -913,7 +913,7 @@
             </ul>
         </div>
     </section>
-    <section class="brands">
+    <section class="brands" id="Partners">
         <div class="container brands__inner">
             <img class="brands__item" src="./images/icons/logo-01.png" alt="logo of the barber">
             <img class="brands__item" src="./images/icons/logo-02.png" alt="logo of the delicious">
