--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>PSDTemplate</title>
     <link rel='stylesheet'
         href='https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css'>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500|Raleway:400,500,600,700,800&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="dist/style.css">
 </head>
 
 <body>
