changes for optimization

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
         <div class="slideshow-container">
             <div class="slides">
-                <img src="images/mainphoto.png">
+                <img src="images/mainphoto.png" alt="slide1">
                 <div class="slides__content">
                     <p class="slides__subtitle">Unique and Modern Design</p>
                     <h2 class="slides__title">Portfolio PSD Template</h2>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="slides">
-                <img src="images/mainphoto.png">
+                <img src="images/mainphoto.png" alt="slide2">
                 <div class="slides__content">
                     <p class="slides__subtitle">Unique and Modern Design 2</p>
                     <h2 class="slides__title">Portfolio PSD Template</h2>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="slides">
-                <img src="images/mainphoto.png">
+                <img src="images/mainphoto.png" alt="slide3">
                 <div class="slides__content">
                     <p class="slides__subtitle">Unique and Modern Design 3</p>
                     <h2 class="slides__title">Portfolio PSD Template</h2>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="slides">
-                <img src="images/mainphoto.png">
+                <img src="images/mainphoto.png" alt="slide4">
                 <div class="slides__content">
                     <p class="slides__subtitle">Unique and Modern Design 4</p>
                     <h2 class="slides__title">Portfolio PSD Template</h2>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="slides">
-                <img src="images/mainphoto.png">
+                <img src="images/mainphoto.png" alt="slide5">
                 <div class="slides__content">
                     <p class="slides__subtitle">Unique and Modern Design 5</p>
                     <h2 class="slides__title">Portfolio PSD Template</h2>
@@ -170,11 +170,11 @@
             <p class="realizations__text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
                 saepius. Claritas est etiam
                 processus dynamicus, qui sequitur mutationem consuetudium.</p>
-            <img class="realizations__img realizations__img--left" src="./images/browser-left.png"
+            <img class="realizations__img realizations__img--left" src="./images/browser-left.jpg"
                 alt="image of window1">
-            <img class="realizations__img realizations__img--center" src="./images/browser-center.png"
+            <img class="realizations__img realizations__img--center" src="./images/browser-center.jpg"
                 alt="image of window2">
-            <img class="realizations__img realizations__img--right" src="./images/browser-right.png"
+            <img class="realizations__img realizations__img--right" src="./images/browser-right.jpg"
                 alt="image of window3">
         </div>
     </section>
