fixed slider to right direction

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     <button type="button" class="btn">Get Started</button>
                 </div>
             </div>
-            <a class="prev"><img src="./images/icons/left.svg" alt="go to prev slide"></a>
-            <a class="next"><img src="./images/icons/right.svg" alt="go to next slide"></a>
+            <a class="prev"><img data-dir="prev" src="./images/icons/left.svg" alt="go to prev slide"></a>
+            <a class="next"><img data-dir="next" src="./images/icons/right.svg" alt="go to next slide"></a>
         </div>
         <div class="dots">
             <span class="dot"></span>
@@ -228,7 +228,7 @@
                 </div>
                 <div class="example">
                     <div class="example__inner">
-                        <img class="example__img" src="./images/photo2.png" alt="photo2">
+                        <img class="example__img" src="./images/photo2.jpg" alt="photo2">
                         <div class="example__info">
                             <a class="example__info-link" href="#">
                                 <svg class="example__info-link--icon" xmlns="http://www.w3.org/2000/svg"
